objects/SVMXC__Code_Snippet__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Javascript Code snippets are maintained in this object.</description>
    <fields>
        <fullName>SVMXC__Data__c</fullName>
        <label>Data</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Enter a detailed description of this code snippet.</description>
        <inlineHelpText>Enter a detailed description of this code snippet.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the code snippet is a standard ServiceMax snippet.</description>
        <inlineHelpText>Flag to indicate if the code snippet is a standard ServiceMax snippet.</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Name__c</fullName>
        <label>Snippet Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Snippet_Version__c</fullName>
        <description>Determines the code snippet version</description>
        <inlineHelpText>Determines the code snippet version</inlineHelpText>
        <label>Snippet Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SnippetId__c</fullName>
        <description>A unique Identification for each code snippet.</description>
        <inlineHelpText>A unique Identification for each code snippet.</inlineHelpText>
        <label>Snippet ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <description>Select type of code snippet.</description>
        <inlineHelpText>Select type of code snippet.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JavaScript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Code Snippet</label>
    <listViews>
        <fullName>All_Snippets</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SVMXC__SnippetId__c</columns>
        <columns>SVMXC__Name__c</columns>
        <columns>SVMXC__SM_Snippet_Version__c</columns>
        <columns>SVMXC__Type__c</columns>
        <columns>SVMXC__Description__c</columns>
        <columns>SVMXC__Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Snippets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Snippets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>